--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,12 +3,14 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-
-RUN npm install
+RUN npm ci --only=production
 
 COPY . .
 
-RUN npm run build
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nextjs -u 1001
+
+USER nextjs
 
 EXPOSE 3000
 
