--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,9 @@ psycopg2-binary==2.9.9
 redis==5.0.1
 celery==5.3.4
 pydantic==2.5.0
+pydantic-settings==2.1.0
+asyncpg==0.29.0
+greenlet==3.0.3
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
