--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ asyncpg==0.29.0
 greenlet==3.0.3
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 python-multipart==0.0.6
 pytest==7.4.3
 pytest-asyncio==0.21.1
